Added webapp project and initial page content

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ wtp-server/.classpath
 wtp-server/vrecommended-mappings.json
 wtp-server/vrecommended-notfound.json
 wtp-server/vrecommended.json
+wtp-webapp/.classpath
